--- a/package.json
+++ b/package.json
@@ -9,16 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@stripe/react-stripe-js": "^3.0.0",
+    "@stripe/stripe-js": "^5.2.0",
+    "@tanstack/react-query": "^5.61.5",
+    "axios": "^1.7.8",
+    "date-fns": "^4.1.0",
+    "dotenv": "^16.4.5",
+    "mongoose": "^8.8.3",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-date-range": "^2.0.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-fast-marquee": "^1.6.5",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-spinners": "^0.14.1",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-date-range": "^1.4.9",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
     "eslint": "^8",
